--- a/index.html
+++ b/index.html
@@ -7,8 +7,75 @@
     <title>Document</title>
 </head>
 <body>
-    <head>
-        <h1>filmtopia</h1>
-    </head>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid bg-primary">
+          <a class="navbar-brand" href="#">Filmotopia</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Domů</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Tip na film</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Redakce</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <img class="" src="Slider.png" alt="kocicak"> 
+      <h2 class="text-white bg-primary">Kočky a psy</h2>
+      <p class="text-white">Slider s nejnovějšími filmovými novinkami</p>
+      <h2 class="">Na co se vydat do kina</h2>
+      <div class="border border-1 container">
+        <img src="obr6.png" alt="walle">
+        <h3>Wall-E</h3>
+        <p>Dedchberouci pribeh o jednom malem robotovi, ktery se rozhodl zmenit svet</p>
+        <a href="#" class="btn btn-primary">Více o filmu</a>
+      </div>
+      <div class="border border-1 container">
+        <img src="obr1.png" alt="walle">
+        <h3>Hra</h3>
+        <p>Jaký dar dát člověku, který má všechno? Možná strach o vlastní život, který mu změní svět</p>
+        <a href="#" class="btn btn-primary">Více o filmu</a>
+      </div>
+      <div class="border border-1 container">
+        <img src="obr2.png" alt="walle">
+        <h3>Policajt ze školky</h3>
+        <p>Arnold Schwarzenegger ve své životní roli, kdo myslíte, že vyhraje?</p>
+        <a href="#" class="btn btn-primary">Více o filmu</a>
+      </div>
+      <div class="border border-1 container">
+        <img src="obr3.png" alt="walle">
+        <h3>Mýval Miloš</h3>
+        <p>Dojemný příběh o učiteli, který nevěděl kdy přestat. Nakonec našel lásku.</p>
+        <a href="#" class="btn btn-primary">Více o filmu</a>
+      </div>
+      <div class="border border-1 container">
+        <img src="obr4.png" alt="walle">
+        <h3>Barevná smršť</h3>
+        <p>Kdo je to grafik a proč by nás měl zajímat? Jeden
+            student oboru grafika se vydal na cestu zla</p>
+        <a href="#" class="btn btn-primary">Více o filmu</a>
+      </div>
+      <div class="border border-1 container">
+        <img src="obr5.png" alt="walle">
+        <h3>Utíkej jako o život</h3>
+        <p>Může špatný design způsobit psychickou újmu?
+            Existuje něco jako příliš mnoho barev?</p>
+        <a href="#" class="btn btn-primary">Více o filmu</a>
+      </div>
+      <h2>Nejnovější recenze našich zákazníků</h2>
+      <div class="-bs-success-bg-subtle">Kladné recenze
+
+      </div>
+      <div class="-bs-warning-bg-subtle">Negativní recenze
+        
+      </div>
 </body>
 </html>
