--- a/index.html
+++ b/index.html
@@ -32,38 +32,38 @@
       <h2 class="text-white bg-primary">Kočky a psy</h2>
       <p class="text-white">Slider s nejnovějšími filmovými novinkami</p>
       <h2 class="">Na co se vydat do kina</h2>
-      <div class="border border-1 container">
+      <div class="border border-1">
         <img src="obr6.png" alt="walle">
         <h3>Wall-E</h3>
         <p>Dedchberouci pribeh o jednom malem robotovi, ktery se rozhodl zmenit svet</p>
         <a href="#" class="btn btn-primary">Více o filmu</a>
       </div>
-      <div class="border border-1 container">
+      <div class="border border-1">
         <img src="obr1.png" alt="walle">
         <h3>Hra</h3>
         <p>Jaký dar dát člověku, který má všechno? Možná strach o vlastní život, který mu změní svět</p>
         <a href="#" class="btn btn-primary">Více o filmu</a>
       </div>
-      <div class="border border-1 container">
+      <div class="border border-1">
         <img src="obr2.png" alt="walle">
         <h3>Policajt ze školky</h3>
         <p>Arnold Schwarzenegger ve své životní roli, kdo myslíte, že vyhraje?</p>
         <a href="#" class="btn btn-primary">Více o filmu</a>
       </div>
-      <div class="border border-1 container">
+      <div class="border border-1">
         <img src="obr3.png" alt="walle">
         <h3>Mýval Miloš</h3>
         <p>Dojemný příběh o učiteli, který nevěděl kdy přestat. Nakonec našel lásku.</p>
         <a href="#" class="btn btn-primary">Více o filmu</a>
       </div>
-      <div class="border border-1 container">
+      <div class="border border-1">
         <img src="obr4.png" alt="walle">
         <h3>Barevná smršť</h3>
         <p>Kdo je to grafik a proč by nás měl zajímat? Jeden
             student oboru grafika se vydal na cestu zla</p>
         <a href="#" class="btn btn-primary">Více o filmu</a>
       </div>
-      <div class="border border-1 container">
+      <div class="border border-1">
         <img src="obr5.png" alt="walle">
         <h3>Utíkej jako o život</h3>
         <p>Může špatný design způsobit psychickou újmu?
@@ -71,11 +71,14 @@
         <a href="#" class="btn btn-primary">Více o filmu</a>
       </div>
       <h2>Nejnovější recenze našich zákazníků</h2>
-      <div class="-bs-success-bg-subtle">Kladné recenze
-
+      <div class="bg-success-subtle">
+        <span class="text-success">Kladné recenze</span>
       </div>
-      <div class="-bs-warning-bg-subtle">Negativní recenze
-        
+      <div class="bg-danger-subtle">
+        <span class="text-danger">Negativní recenze</span>
+        <div>
+            <h3>René Trumpeta</h3>
+        </div>
       </div>
 </body>
 </html>
